--- a/movielist/index.html
+++ b/movielist/index.html
@@ -50,7 +50,7 @@
          
         <div class="row g-4 mt-3">
             <div class="col-6">
-            <a href="BCM1.html" class="d-block position-relative text-decoration-none">
+            <a href="BCMP/BCM1.html" class="d-block position-relative text-decoration-none">
                  <img src="IMG/m2.webp" class="w-100 rounded-3" style="height:400px; object-fit:cover;" alt="">
                 <span class="position-absolute text-white px-2 py-1 rounded"
                style="background: rgba(0,0,0,.7); top:70%; left:12px;">Movie</span>
@@ -61,7 +61,7 @@
              </div>
 
           <div class="col-6">
-             <a href="BCM2.html" class="d-block position-relative text-decoration-none">
+             <a href="BCMP/BCM2.html" class="d-block position-relative text-decoration-none">
              <img src="IMG/m3.webp" class="w-100 rounded-3" style="height:400px; object-fit:cover;" alt="">
              <span class="position-absolute text-white px-2 py-1 rounded"
              style="background: rgba(0,0,0,.7); top:70%; left:12px;">Movie</span>
